rust/kcl-lib/tests/execute_engine_error_return/execution_error.snap
---
source: kcl-lib/src/simulation_tests.rs
description: Error from executing execute_engine_error_return.kcl
---
KCL Semantic error

  × semantic: Cannot solid extrude an open profile. Either close the profile,
  │ or use a surface extrude.
   ╭─[7:6]
 6 │   |> line(end = [-11.53311, 2.81559])
 7 │   |> extrude(length = 4)
   ·      ─────────┬─────────┬
   ·               ╰── tests/execute_engine_error_return/input.kcl
   ·               ╰── tests/execute_engine_error_return/input.kcl
   ╰────
  ╰─▶ KCL Semantic error
      
        × semantic: Cannot solid extrude an open profile. Either close the
        │ profile, or use a surface extrude.
         ╭─[7:6]
       6 │   |> line(end = [-11.53311, 2.81559])
       7 │   |> extrude(length = 4)
         ·      ─────────┬─────────
         ·               ╰── tests/execute_engine_error_return/input.kcl
         ╰────
